# openscreen-rs

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  lint.yml
openscreen-application/: Cargo.toml
openscreen-application/src/: cert.rs  lib.rs  messages.rs  state.rs  storage.rs
openscreen-common/: Cargo.toml
openscreen-common/src/: error.rs  lib.rs  types.rs
openscreen-common/src/quinn_varint/: mod.rs  varint.rs
openscreen-common/tests/: varint.rs
openscreen-crypto/: Cargo.toml
openscreen-crypto-rustcrypto/: Cargo.toml
openscreen-crypto-rustcrypto/src/: lib.rs
openscreen-crypto-rustcrypto/tests/: confirmation_mismatch_test.rs
openscreen-crypto/src/: lib.rs
openscreen-discovery/: Cargo.toml
openscreen-discovery-mdns/: Cargo.toml
openscreen-discovery-mdns/src/: browser.rs  lib.rs  publisher.rs  utils.rs
openscreen-discovery-mock/: Cargo.toml
openscreen-discovery-mock/src/: backend.rs  browser.rs  lib.rs  publisher.rs
openscreen-discovery-mock/tests/: integration.rs
openscreen-discovery/src/: auth_token.rs  browser.rs  error.rs  fingerprint.rs  lib.rs  publisher.rs  service_info.rs
openscreen-discovery/tests/: fingerprint_integration.rs
openscreen-network/: Cargo.toml
openscreen-network/src/: crypto_data.rs  lib.rs  messages.rs  state.rs
openscreen-network/src/state_machine/: authenticated.rs  awaiting_capabilities.rs  awaiting_confirmation.rs  awaiting_handshake.rs  awaiting_status.rs  computing.rs  failed.rs  generating_handshake.rs  idle.rs  initiating_handshake.rs  mod.rs  negotiating.rs
openscreen-network/tests/: auth_token_validation_tests.rs  message_transcript_tests.rs  protocol_roundtrip.rs  wire_format_tests.rs
openscreen-quinn/: Cargo.toml  README.md
openscreen-quinn/src/: lib.rs  server.rs
openscreen-quinn/tests/: fingerprint_verification_tests.rs  spake2_authentication.rs  spki_fingerprint_tests.rs  tls_fingerprint_unit_tests.rs
openscreen-quinn/tests/common/: mod.rs
