[package]
name = "openscreen-application"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
openscreen-common = { path = "../openscreen-common" }
openscreen-network = { path = "../openscreen-network" }
openscreen-crypto = { path = "../openscreen-crypto" }
openscreen-quinn = { path = "../openscreen-quinn" }
openscreen-crypto-rustcrypto = { path = "../openscreen-crypto-rustcrypto" }
heapless = "0.8"
minicbor = { version = "0.25", default-features = false, features = ["half"] }

# Optional dependencies for binaries
openscreen-discovery = { path = "../openscreen-discovery", optional = true }
openscreen-discovery-mdns = { path = "../openscreen-discovery-mdns", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
tokio = { version = "1.45", features = ["full"], optional = true }
anyhow = { version = "1.0", optional = true }
colored = { version = "2.1", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
quinn = { version = "0.11", optional = true }
rcgen = { version = "0.13", optional = true }
pem = { version = "3.0", optional = true }
uuid = { version = "1.10", features = ["v4"], optional = true }
base64 = { version = "0.22", optional = true }
x509-parser = { version = "0.16", optional = true }
hex = { version = "0.4", optional = true }
hostname = { version = "0.4", optional = true }

[[bin]]
name = "app-sender"
required-features = ["bin"]

[[bin]]
name = "app-receiver"
required-features = ["bin"]


[features]
default = ["bin"]
bin = [
    "anyhow",
    "base64",
    "clap",
    "colored",
    "hex",
    "hostname",
    "openscreen-discovery-mdns",
    "openscreen-discovery",
    "pem",
    "quinn",
    "rcgen",
    "tokio",
    "tracing-subscriber",
    "tracing",
    "uuid",
    "x509-parser",
    ]

[dev-dependencies]
tempfile = "3.8"

[lints]
workspace = true
