[package]
name = "openscreen-discovery-mdns"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
openscreen-discovery = { path = "../openscreen-discovery" }
async-trait = "0.1"
futures = "0.3"
async-stream = "0.3"
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread"] }
mdns-sd = "0.17"
log = "0.4"
thiserror = "2.0"
hostname = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
env_logger = "0.11"

[lints]
workspace = true
