[package]
name = "openscreen-discovery-mock"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
openscreen-discovery = { path = "../openscreen-discovery" }
async-trait = "0.1"
futures = "0.3"
async-stream = "0.3"
tokio = { version = "1", features = ["sync", "time", "rt", "rt-multi-thread"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

[lints]
workspace = true
