[package]
name = "openscreen-network"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
openscreen-common = { path = "../openscreen-common" }
openscreen-crypto = { path = "../openscreen-crypto" }
heapless = "0.8"
minicbor = { version = "0.25", default-features = false, features = ["half"] }
log = "0.4"
subtle = { version = "2.6", default-features = false }

[dev-dependencies]
openscreen-crypto-rustcrypto = { path = "../openscreen-crypto-rustcrypto" }
hex = "0.4"

[lints]
workspace = true
