[package]
name = "openscreen-quinn"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
name = "openscreen_quinn"

[dependencies]
openscreen-network = { path = "../openscreen-network" }
openscreen-crypto = { path = "../openscreen-crypto" }
openscreen-crypto-rustcrypto = { path = "../openscreen-crypto-rustcrypto" }
quinn = { workspace = true }
heapless = { workspace = true }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Crypto
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.13"
sha2 = "0.10"
hex = "0.4"
x509-parser = "0.16"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

[dev-dependencies]
openscreen-discovery = { path = "../openscreen-discovery" }
